--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:e3904a6741caa27ff72f6b17dac89a75e304eea1927cf666f48c3774003462f7"
+  "signature": "sha256:3faef21e906a6a022aa2f0326226a93a2fc4a88a8cbeb26ac50554984c54e9f1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -61,7 +61,7 @@
      "source": [
       "## Problem 1:\n",
       "\n",
-      "Prove the following for the matrix norm, where $A, B$ are matrices, $\\boldsymbol u$ is a vector and $b$ is a scaler.\n",
+      "Prove the following properties for the matrix norm, where $A, B$ are matrices, $\\boldsymbol u$ is a vector and $b$ is a scaler.\n",
       "$\\renewcommand{bs}{\\boldsymbol}$\n",
       "* $\\Vert A ^{-1} \\Vert = \\max_{\\bs u \\ne 0} \\frac{\\Vert \\bs u\\Vert}{\\Vert A \\bs u \\Vert} = \\left(\\min_{\\bs u \\ne 0} \\frac{\\Vert A \\bs u}{\\Vert \\bs u \\Vert}\\right)^{-1}$\n",
       "* $\\Vert A \\boldsymbol u \\Vert  \\le \\Vert A\\Vert \\; \\Vert \\boldsymbol u\\Vert $\n",
@@ -79,7 +79,7 @@
       "\n",
       "\n",
       "0. Derive the analytical expression of Cholesky decomposition of a 2 dimensional correlation matrix \n",
-      "$\\left(\\begin{array} \\\\ 1 & \\rho \\\\ \\rho & 1 \\end{array} \\right)$\n",
+      "$\\left(\\begin{array} \\\\ 1 & \\rho \\\\ \\rho & 1 \\end{array} \\right)$, this result is worth memorizing.\n",
       "1. Implement the recursive Cholesky decomposition algorithm discussed in the class in Python, with the following requirements:\n",
       " - use vector/matrix calculation whenever possible, but you obviously should not just call the buildin numpy/scipy functions for Cholesky decomposition \n",
       " - detect and throw exception if the input matrix is not semi-positive definite\n",
@@ -359,8 +359,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Please use the historical data to:\n",
-      "\n",
       "1. estimate the historical correlation and covariance matrix of the DJIA constiuents' daily returns, \n",
       "2. estimate historical excess return of individual stocks (assume the historical risk free rate is 3%)\n",
       "3. compute the optimal portfolio using the estimated historical excess return and covariance matrix, comment on whether the portfolio looks reasonable.\n",
@@ -369,7 +367,7 @@
       "2. take the daily return time series, and split them into two segments: one only contains odd days' returns and the other only contains even days' returns. Then estimate every DJIA stock's annualized return and annualized vol from these two data segements, and compare their results. Please comment on which of the two, return or vol, can be more reliably estimated from historical data. \n",
       "6. [Extra credit] Please repeat the analysis using weekly returns and comment on whether the results are materially different\n",
       "6. [Extra credit]: use numerical simulation to show that the optimal portfolio from #3 indeed has the largest Sharp ratio for the historical excess return and covariance; the best way to illustrate this is to introduce many random perturbations around the optimal portfolio. ```numpy.random``` is a random number generator package in Python.\n",
-      "7. [Extra credit, open question] comment on what practical implication you might infer from your results in 7\n",
+      "7. [Extra credit, open question] comment on what practical implication you might infer from the results in 8.\n",
       "\n",
       "Hints and requirements: \n",
       "* as discussed in class, returns are only meaningful in the relative sense, so please annualize all your results.\n",
