--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -768,7 +768,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -820,11 +820,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0x3f2a978>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -865,11 +865,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0xa9460b8>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -940,11 +940,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0x3f2a9b0>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -1001,11 +1001,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0x3f2ae48>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -1050,11 +1050,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0x3f2aeb8>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -1099,11 +1099,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0x97775c0>"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -1148,11 +1148,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0xa976b38>"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -1192,7 +1192,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -1237,11 +1237,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0x3f2ae80>"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -1286,11 +1286,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML object>"
+        "<IPython.core.display.HTML at 0x3f2ad68>"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -1326,7 +1326,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -1350,7 +1350,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -1386,7 +1386,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -1409,7 +1409,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -1448,7 +1448,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -1483,7 +1483,7 @@
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -1503,7 +1503,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -1547,7 +1547,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -1599,7 +1599,7 @@
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
