--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:e6c414dfc163f51ea18e204d1a369c16e64bd0ffdfa3969f60969c178ee39d68"
+  "signature": "sha256:b866ed37f312bcf230ad5db226f6207d3820a417d675d7e30e0dcbe14c913806"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -740,9 +740,9 @@
       }
      },
      "source": [
-      "## Cholesky Decomposition\n",
+      "# Cholesky Decomposition\n",
       "\n",
-      "aka Cholesky Factorization"
+      "a.k.a Cholesky Factorization"
      ]
     },
     {
@@ -856,7 +856,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "subslide"
+       "slide_type": "-"
       }
      },
      "source": [
@@ -1004,23 +1004,23 @@
       "lcv = np.linalg.cholesky(cv)\n",
       "fmt.displayMath(sp.Matrix(lcm).evalf(4), \n",
       "                fmt.joinMath('=', sp.Matrix(lcm.T).evalf(4), sp.Matrix(lcm.dot(lcm.T)).evalf(4)), \n",
-      "                sep=\"\", pre=\"\\small\")"
+      "                sep=\"\", pre=\"\\scriptsize\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "latex": [
-        "$$\\small \\left(\\begin{matrix}1.0 & 0 & 0\\\\0.03215 & 0.9995 & 0\\\\0.4191 & 0.2878 & 0.8611\\end{matrix}\\right)\\left(\\begin{matrix}1.0 & 0.03215 & 0.4191\\\\0 & 0.9995 & 0.2878\\\\0 & 0 & 0.8611\\end{matrix}\\right)=\\left(\\begin{matrix}1.0 & 0.03215 & 0.4191\\\\0.03215 & 1.0 & 0.3011\\\\0.4191 & 0.3011 & 1.0\\end{matrix}\\right)$$"
+        "$$\\scriptsize \\left(\\begin{matrix}1.0 & 0 & 0\\\\0.03215 & 0.9995 & 0\\\\0.4191 & 0.2878 & 0.8611\\end{matrix}\\right)\\left(\\begin{matrix}1.0 & 0.03215 & 0.4191\\\\0 & 0.9995 & 0.2878\\\\0 & 0 & 0.8611\\end{matrix}\\right)=\\left(\\begin{matrix}1.0 & 0.03215 & 0.4191\\\\0.03215 & 1.0 & 0.3011\\\\0.4191 & 0.3011 & 1.0\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xab7ee48>"
+        "<IPython.core.display.Math at 0xe1b07b8>"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 37
     },
     {
      "cell_type": "markdown",
@@ -1035,23 +1035,23 @@
      "input": [
       "fmt.displayMath(sp.Matrix(lcv).evalf(4), \n",
       "                fmt.joinMath('=', sp.Matrix(lcv.T).evalf(4), sp.Matrix(lcm.dot(lcv.T)).evalf(4)), \n",
-      "                sep=\"\", pre=\"\\small\")"
+      "                sep=\"\", pre=\"\\scriptsize\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "latex": [
-        "$$\\small \\left(\\begin{matrix}0.02836 & 0 & 0\\\\0.0008678 & 0.02698 & 0\\\\0.01978 & 0.01359 & 0.04065\\end{matrix}\\right)\\left(\\begin{matrix}0.02836 & 0.0008678 & 0.01978\\\\0 & 0.02698 & 0.01359\\\\0 & 0 & 0.04065\\end{matrix}\\right)=\\left(\\begin{matrix}0.02836 & 0.0008678 & 0.01978\\\\0.0009117 & 0.027 & 0.01422\\\\0.01189 & 0.00813 & 0.0472\\end{matrix}\\right)$$"
+        "$$\\scriptsize \\left(\\begin{matrix}0.02836 & 0 & 0\\\\0.0008678 & 0.02698 & 0\\\\0.01978 & 0.01359 & 0.04065\\end{matrix}\\right)\\left(\\begin{matrix}0.02836 & 0.0008678 & 0.01978\\\\0 & 0.02698 & 0.01359\\\\0 & 0 & 0.04065\\end{matrix}\\right)=\\left(\\begin{matrix}0.02836 & 0.0008678 & 0.01978\\\\0.0009117 & 0.027 & 0.01422\\\\0.01189 & 0.00813 & 0.0472\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xab634e0>"
+        "<IPython.core.display.Math at 0xe08e7b8>"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 41
     },
     {
      "cell_type": "markdown",
