--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:b866ed37f312bcf230ad5db226f6207d3820a417d675d7e30e0dcbe14c913806"
+  "signature": "sha256:0c076dc0cde11917b06d9a6878c4b2ec49d17daba7c49d8bd752516a7b0f3c23"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -856,7 +856,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "-"
+       "slide_type": "subslide"
       }
      },
      "source": [
@@ -1275,8 +1275,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* The identical results can be obtained using Cholesky decomposition of the covariance matrix.\n",
-      "* $L \\bs \\epsilon$ and $L^T \\bs \\epsilon$ are different, which one gives back the intended correlation?"
+      "$L \\bs \\epsilon$ and $L^T \\bs \\epsilon$ are different, gives different correlation"
      ]
     },
     {
