--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:0c076dc0cde11917b06d9a6878c4b2ec49d17daba7c49d8bd752516a7b0f3c23"
+  "signature": "sha256:fbf3d2f18c42a84dbc27a073a9fe3acebc191b47beb5f12f9e54b09df750a9be"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -782,9 +782,11 @@
      "source": [
       "## Correlation matrix\n",
       "\n",
+      "$\\renewcommand{Sigma}{\\mathcal{S}}$\n",
+      "\n",
       "* $C = (\\rho_{ij})$ is the co-variance matrix of the normalized factors $\\bs {\\tilde s} = [\\frac{r_1}{\\sigma_1}, ..., \\frac{r_n}{\\sigma_n}]^T$\n",
-      "* $V = \\Sigma C \\Sigma $, where $\\Sigma$ is a diagonal matrix of $\\sigma_i$\n",
-      "* all elements in a correlation matrix are within [-1, 1]"
+      "* $V = \\Sigma C \\cs $, where $\\cs$ is a diagonal matrix of $\\sigma_i$\n",
+      "* all elements in a correlation matrix are within [-1, 1]\n"
      ]
     },
     {
@@ -1200,7 +1202,7 @@
      "source": [
       "## Draw correlated Brownians\n",
       "\n",
-      "Draw discretized version of $\\delta \\bs w \\approx L \\bs z \\sqrt{\\delta t}$\n",
+      "Draw discretized version of $\\delta \\bs w = L \\bs z \\sqrt{\\delta t}$\n",
       "* where $\\bs z$ is a vector of independent standard normal random variables\n",
       "  * $\\mathbb{E}[\\bs z] = \\bs 1$, $\\mathbb{E}[\\bs z \\bs z^T] = I$ \n",
       "* $L$ is the Cholesky decomposition of the correlaiton matrix $C = LL^T$\n",
