--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:fbf3d2f18c42a84dbc27a073a9fe3acebc191b47beb5f12f9e54b09df750a9be"
+  "signature": "sha256:4cbd1ce3817205676fb4dbbba4cf13fe8eaa12b52c45d2d3cb7dc1a3d07e7395"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -785,7 +785,7 @@
       "$\\renewcommand{Sigma}{\\mathcal{S}}$\n",
       "\n",
       "* $C = (\\rho_{ij})$ is the co-variance matrix of the normalized factors $\\bs {\\tilde s} = [\\frac{r_1}{\\sigma_1}, ..., \\frac{r_n}{\\sigma_n}]^T$\n",
-      "* $V = \\Sigma C \\cs $, where $\\cs$ is a diagonal matrix of $\\sigma_i$\n",
+      "* $V = \\Sigma C \\Sigma $, where $\\Sigma$ is a diagonal matrix of $\\sigma_i$\n",
       "* all elements in a correlation matrix are within [-1, 1]\n"
      ]
     },
@@ -1477,18 +1477,13 @@
      "source": [
       "## Portfolio optimization\n",
       "\n",
-      "* Powerful mean/variance portfolio theory can be expressed succinctly using linear algebra and matrix calculus.\n",
+      "Powerful mean/variance portfolio theory can be expressed succinctly using linear algebra and matrix calculus.\n",
       "\n",
       "Suppose there are $n$ **risky** assets on the market, with random return vector $\\tilde{\\bs r}$ whose covariance matrix is $V$,\n",
       "\n",
       "* $\\bs w$: a portfolio, its elements are values (dollar) invested in each asset\n",
       "  * $\\bs w^T \\tilde{\\bs r}$ is the portfolio's P&L\n",
-      "  * $\\sigma^2 = \\bs w^TV\\bs w$: the variance of the portfolio P&L\n",
-      "* $\\bs w_b$: a benchmark portfolio, e.g. a sector index\n",
-      "  * $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $: the beta vector of individual assets to the benchmark portfolio\n",
-      "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = {\\bs 1}$, the benchmark portfolio itself has a beta of $\\bs 1$\n",
-      "* $\\bs w_m$: the market portfolio, as defined in CAPM\n",
-      "  * $\\bs \\beta_m = \\frac{V\\bs w_m}{\\sigma^2_m}$: the betas vector to the market portfolio $\\bs w_m$"
+      "  * $\\sigma^2 = \\bs w^TV\\bs w$: the variance of the portfolio P&L"
      ]
     },
     {
@@ -1523,7 +1518,27 @@
       "\n",
       "Sharp ratio is invariant under:\n",
       "* portfoio scaling: $s(a \\bs w) = s(\\bs w)$\n",
-      "* mix (leverage or de-leverage) with the risk free assets, the risk free asset has 0 contribution to portfolio excess return and vol."
+      "* leverage or deleverage: borrowing or lending money using the risk free asset "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Benchmark portfolio and $\\bs \\beta$\n",
+      "\n",
+      "Benchmark portfolio is usually an index portfolio to measure the performane of active portfolio management. \n",
+      "\n",
+      "* $\\bs w_b$: a benchmark portfolio\n",
+      "  * $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $: the beta vector of individual assets to the benchmark portfolio\n",
+      "  * The beta of a portfolio $\\bs w$ is $\\bs w^T \\bs \\beta_b$\n",
+      "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = {1}$, the benchmark portfolio itself has a beta of $1$\n",
+      "* $\\bs w_m$: the market portfolio, as defined in CAPM\n",
+      "  * $\\bs \\beta_m = \\frac{V\\bs w_m}{\\sigma^2_m}$: the betas vector to the market portfolio $\\bs w_m$"
      ]
     },
     {
