--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:4cbd1ce3817205676fb4dbbba4cf13fe8eaa12b52c45d2d3cb7dc1a3d07e7395"
+  "signature": "sha256:bf8a63dfb45d45ef85a18d62a99ace2361bf9ecc0926eec62e9aa4221c572dcc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1872,7 +1872,7 @@
       "\n",
       "$$\\mathbb{E}[\\tilde{\\bs r}] - r_0 = \\bs \\beta_m \\left(r_m - r_0\\right)$$\n",
       "\n",
-      "* $r_m = \\mathbb{E}[\\bs w_m^T \\bs {\\tilde r}] $ is the market portfolio's expected return\n",
+      "* $r_m = \\frac{\\mathbb{E}[\\bs w_m^T \\bs {\\tilde r}]}{\\bs w_m^T \\bs 1} $ is the market portfolio's expected return\n",
       "* this is exactly the CAPM."
      ]
     },
