--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:3faef21e906a6a022aa2f0326226a93a2fc4a88a8cbeb26ac50554984c54e9f1"
+  "signature": "sha256:28a239a22de93a192a93f93c795e1a20f5352033ddd60f11463b3cc14924a484"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -53,7 +53,7 @@
        ]
       }
      ],
-     "prompt_number": 75
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -364,15 +364,42 @@
       "3. compute the optimal portfolio using the estimated historical excess return and covariance matrix, comment on whether the portfolio looks reasonable.\n",
       "4. compute the implied return forecast from the actual DJIA portfolio, compare this to the historical estimate, comment on which may be a better forecast for the future returns.\n",
       "5. compute the condition number of the covariance matrix, and comments the numerical stability of the optimal portfolio. You can use the python function ```numpy.linalg.norm``` for matrix norm.\n",
-      "2. take the daily return time series, and split them into two segments: one only contains odd days' returns and the other only contains even days' returns. Then estimate every DJIA stock's annualized return and annualized vol from these two data segements, and compare their results. Please comment on which of the two, return or vol, can be more reliably estimated from historical data. \n",
+      "2. take the daily return time series, and split them into two segments: one only contains odd days' returns and the other only contains even days' returns. Then estimate every DJIA stock's annualized return and annualized vol from these two data segements, and compare their results. Please comment on which of the two metric, return or volatility, can be reliably estimated from historical data. \n",
       "6. [Extra credit] Please repeat the analysis using weekly returns and comment on whether the results are materially different\n",
       "6. [Extra credit]: use numerical simulation to show that the optimal portfolio from #3 indeed has the largest Sharp ratio for the historical excess return and covariance; the best way to illustrate this is to introduce many random perturbations around the optimal portfolio. ```numpy.random``` is a random number generator package in Python.\n",
       "7. [Extra credit, open question] comment on what practical implication you might infer from the results in 8.\n",
       "\n",
       "Hints and requirements: \n",
-      "* as discussed in class, returns are only meaningful in the relative sense, so please annualize all your results.\n",
-      "* you may run into singular matrix when reverting the covariance matrix, try to find a work around if you do, (imagine what you would do if your future boss needs some results fast, and he doesn't understand what is a singular matrix that can't be inverted)."
+      "* as discussed in class, returns are only meaningful in the relative sense, so please annualize all your results. You will lose credit without annualization.\n",
+      "* you may run into singular matrix when reverting the covariance matrix, try to find a work around if you do, (imagine what you would do if your future boss needs some results fast, and he doesn't understand what is a singular matrix that can't be inverted).\n",
+      "* on part 5, you can use array slice to split btw even and odd elements, see the following example:"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "whole = np.arange(1, 10)\n",
+      "print \"whole = \", whole\n",
+      "even = whole[0::2]\n",
+      "odd = whole[1::2]\n",
+      "print \"even = \", even\n",
+      "print \"odd = \", odd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "whole =  [1 2 3 4 5 6 7 8 9]\n",
+        "even =  [1 3 5 7 9]\n",
+        "odd =  [2 4 6 8]\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     }
    ],
    "metadata": {}
