--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:bf8a63dfb45d45ef85a18d62a99ace2361bf9ecc0926eec62e9aa4221c572dcc"
+  "signature": "sha256:b72631c776924eb8b0413b4b0a41b437d0dcbe6702617fd5252d9300f94d8533"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -624,7 +624,7 @@
      "source": [
       "* The LU factorization is the matrix representation of Gaussian elimination\n",
       "* LU factorization can be used to compute matrix inversion\n",
-      "  * trianglular matrix is easy to invert (simply substitute known variables)"
+      "  * trianglular matrix can be inverted by simple substitution"
      ]
     },
     {
@@ -729,7 +729,8 @@
       "* best sorting algorithm: $O(n \\log(n))$\n",
       "\n",
       "Most common numerical linear algebra algorithm is of complexity of $O(n^3)$\n",
-      "* the LU decomposition, iterate through the $n$ diagonal elements, to zero-out each column using a diagonal element cost $O(n^2)$"
+      "* matrix multiplication: $n^2$ elements in output, each element takes $O(n)$\n",
+      "* LU decomposition: $n$ diagonal elements, to zero-out each column costs $O(n^2)$"
      ]
     },
     {
@@ -755,16 +756,17 @@
      "source": [
       "## Covariance matrix\n",
       "\n",
-      "The most important and ubiquitous matrices in quant Finance, \n",
+      "The most important and ubiquitous matrix in quant Finance, \n",
       "\n",
-      "* capturing the linear dependencies of random factors $\\bs{\\tilde r} = [r_1, ..., r_n]^T$ \n",
-      "* we use $\\bar{\\bs r} = \\mathbb{E}[\\bs {\\tilde r}]$ to denote their expectations\n",
+      "* given random factors $\\bs{\\tilde r} = [r_1, ..., r_n]^T$ and their expectation: $\\bar{\\bs r} = \\mathbb{E}[\\bs {\\tilde r}]$\n",
       "\n",
+      "The covariance matrix is:\n",
       "\n",
-      "$$\\begin{array}{l}V &= \\mathbb{E}[(\\bs {\\tilde r} - \\bar{\\bs r})(\\bs {\\tilde r} - \\bar{\\bs r})^T] = \\mathbb{E}[\\bs{\\tilde r} \\bs{\\tilde r}^T] - \\bar{\\bs r}\\bar{\\bs r}^T \\\\\n",
-      "&= (\\text{cov}(r_i, r_j)) = (\\rho_{ij} \\sigma_i \\sigma_j)\\end{array}$$\n",
+      "$$V = \\mathbb{E}[(\\bs {\\tilde r} - \\bar{\\bs r})(\\bs {\\tilde r} - \\bar{\\bs r})^T] = \\mathbb{E}[\\bs{\\tilde r} \\bs{\\tilde r}^T] - \\bar{\\bs r}\\bar{\\bs r}^T $$\n",
       "\n",
-      "Covariance of linear combinations: \n",
+      "* The element $(i, j)$ in $V$ is: $\\text{cov}(r_i, r_j) = \\rho_{ij} \\sigma_i \\sigma_j$.\n",
+      "\n",
+      "Covariance of linear combinations of factors: \n",
       " \n",
       "$$\\begin{array}{l}\n",
       "\\text{cov}(\\bs x^T \\bs r, \\bs y^T \\bs r) &= \\mathbb{E}[(\\bs x^T \\bs r)(\\bs r^T \\bs y)] - \\mathbb{E}[\\bs x^T \\bs r]\\mathbb{E}[\\bs r^T \\bs y]\\\\\n",
@@ -797,13 +799,13 @@
       }
      },
      "source": [
-      "## Symmetric positive definite Matrix\n",
+      "## Symmetric positive definite (SPD)\n",
       "\n",
-      "* $A$ is positive definite if $\\bs x^T A \\bs x > 0$ for $\\forall \\bs{x \\ne 0}$\n",
-      "* $A$ is semi positive definite if $\\bs x^T A \\bs {x \\ge 0}$ for $\\forall \\bs{x \\ne 0}$\n",
-      "* Semi-positive definite does not mean every element in the matrix is positive\n",
+      "* Matrix $A$ is positive definite if $\\bs x^T A \\bs x > 0$ for $\\forall \\bs{x \\ne 0}$\n",
+      "* Matrix $A$ is semi positive definite (SPD) if $\\bs x^T A \\bs {x \\ge 0}$ for $\\forall \\bs{x \\ne 0}$\n",
+      "* SPD does not imply every element in the matrix is positive\n",
       "\n",
-      "Both covariance and correlation matrices are symmetric positive semi-definate (SPD):\n",
+      "Both covariance and correlation matrices are symmetric SPD:\n",
       "\n",
       "* $\\bs x^T V \\bs x = \\text{cov}[\\bs x^T \\bs {\\tilde r},\\bs x^T \\bs {\\tilde r}] = \\text{var}[\\bs x^T \\bs {\\tilde r}] \\ge 0$\n",
       "* $\\bs x^T C \\bs x = \\text{cov}[\\bs x^T \\bs {\\tilde s},\\bs x^T \\bs {\\tilde s}] = \\text{var}[\\bs x^T \\bs {\\tilde s}] \\ge 0$"
@@ -1174,12 +1176,12 @@
      "source": [
       "## Correlated Brownian motion\n",
       "\n",
-      "Ubiquitous in quant Finance\n",
+      "Ubiquitous in quantitative Finance\n",
       "\n",
-      "* The common underlying process for asset prices and other risk factors\n",
-      "* The vast matjority of quant finance models are based on Brownian motions.\n",
+      "* The most common processes for asset prices and risk factors\n",
+      "* The vast matjority of quantitative finance models are based on Brownian motions.\n",
       "\n",
-      "Example: drawing correlated n-dimensional Geometric Brownian motion:\n",
+      "Example: correlated n-dimensional Geometric Brownian motion:\n",
       "\n",
       "$$\n",
       "\\frac{dx^k_t}{x^k_t} = u^k dt + \\sigma^k dw^k_t, \n",
@@ -1451,7 +1453,7 @@
       "\n",
       "* $A, a, b, \\bs c$ are constants (ie, not functions of $\\bs x$)\n",
       "* $\\bs {u=u(x), v=v(x)}, y=y(\\bs x)$ are functions of $\\bs x$\n",
-      "* $O$ is the zero matrix\n",
+      "* $O$ is the zero matrix, $I$ is the identity matrix\n",
       "\n",
       "$\\renewcommand{p}{\\partial}$\n",
       "\n",
@@ -1463,7 +1465,7 @@
       "| $\\frac{\\p \\bs{u}^T A \\bs v}{\\p \\bs x} $ |  $\\bs u^T A \\frac{\\p{\\bs v}}{\\p \\bs x}  +  \\bs v^T A^T \\frac{\\p{\\bs u}}{\\p \\bs x} $ |$\\frac{\\p \\bs{x}^T A \\bs x}{\\p \\bs x} = (A + A^T) \\bs x$, $\\frac{\\p \\bs{u^Tv}}{\\p \\bs x} =\\bs{u}^T\\frac{\\p \\bs{v}}{\\p \\bs x} + \\bs{v}^T\\frac{\\p \\bs{u}}{\\p \\bs x}$ |\n",
       "| $\\frac{\\p{\\bs g(\\bs u})}{\\p \\bs x}$ |  $\\frac{\\p{\\bs g}}{\\p \\bs u} \\frac{\\p{\\bs u}}{\\p \\bs x} $ | chain rules of multiple steps,  $\\frac{\\p \\bs y}{\\p \\bs x}\\frac{\\p \\bs x}{\\p \\bs y} = \\id$  |\n",
       "\n",
-      "* Similar to  univariate calculus, but very succinct\n",
+      "* Similar to  univariate calculus, a compact notation for mutlivariate calculus\n",
       "* Replace $A^T$ by $A^*$ for complex matrix"
      ]
     },
@@ -1534,8 +1536,8 @@
       "Benchmark portfolio is usually an index portfolio to measure the performane of active portfolio management. \n",
       "\n",
       "* $\\bs w_b$: a benchmark portfolio\n",
-      "  * $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $: the beta vector of individual assets to the benchmark portfolio\n",
-      "  * The beta of a portfolio $\\bs w$ is $\\bs w^T \\bs \\beta_b$\n",
+      "  * The beta of a portfolio $\\bs w$ to the benchmark is $\\frac{\\text{cov}(\\bs w^T \\tilde{\\bs r}, \\bs w_b^T \\tilde{\\bs r})}{\\sigma_b^2} = \\frac{\\bs w^T V \\bs w_b^T}{\\sigma_b^2} = \\bs w^T \\bs \\beta_b$\n",
+      "  * Define $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $, the vector of individual assets' beta to the benchmark\n",
       "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = {1}$, the benchmark portfolio itself has a beta of $1$\n",
       "* $\\bs w_m$: the market portfolio, as defined in CAPM\n",
       "  * $\\bs \\beta_m = \\frac{V\\bs w_m}{\\sigma^2_m}$: the betas vector to the market portfolio $\\bs w_m$"
@@ -1552,10 +1554,11 @@
       "## Portfolio optimization\n",
       "Given the view $\\bs f$, the optimal portfolio $\\bs w$ to express the view is:\n",
       " * minimize the variance of portfolio P&L (risk): $\\bs w^TV\\bs w$\n",
-      " * while preserving a unit value of excess P&L: $\\bs w^T \\bs f = 1$\n",
+      " * while preserving a unit dollar of excess P&L: $\\bs w^T \\bs f = 1$\n",
       "\n",
-      "which solves the portfolio $\\bs w^*$ with the maximum Sharp ratio, under the view $\\bs f$:\n",
-      " * $\\bs w^*$ and its mix with risk free asset are the optimal porfolios"
+      "which solves the portfolio $\\bs w^*$ with the maximum Sharp ratio under the view $\\bs f$:\n",
+      " * $\\bs w^*$ has a unique solution\n",
+      " * all portfolios with optimal Sharp ratio have the same risky asset mix"
      ]
     },
     {
@@ -1612,11 +1615,8 @@
       "* $\\bs w$ and $\\frac{1}{a} \\bs w$ defines the same risky asset mix, with identical Sharp ratio\n",
       "\n",
       "\n",
-      "Therefore, the return forecast $\\bs f$ is only meaningful in a relative sense:\n",
-      "* Only the relative sizes of excess returns are important\n",
-      "* e.g. excess return forecast of [1%, 2%] and [10%, 20%] of two assets would result in identical optimal (characteristic) portfolio\n",
-      "\n",
-      "The return forecast $\\bs f$ should only be interpreted in a relative sense, we use $\\propto$ to make it explicit."
+      "Therefore, only the relative sizes of excess returns are important\n",
+      "* e.g. excess return forecast of [1%, 2%] and [10%, 20%] of two assets would result in identical optimal (characteristic) portfolio"
      ]
     },
     {
@@ -1632,14 +1632,14 @@
       "Identical returns: $\\bs f \\propto \\bs e = [1, 1, ...., 1]^T$: \n",
       "\n",
       "* A naive view that all assets have the same excess returns (zero information)\n",
-      "* $\\bs e^T\\bs w = 1$ means it is a fully invested portfolio of \\$1\n",
-      "* $\\bs w_e = \\frac{V^{-1}\\bs e}{\\bs e^TV^{-1}\\bs e}$ has the minimum variance amongst all fully invested portfolio\n",
+      "* $\\bs e^T\\bs w = 1$ means it is a portfolio of \\$1 fully invested in risky assets\n",
+      "* $\\bs w_e = \\frac{V^{-1}\\bs e}{\\bs e^TV^{-1}\\bs e}$ has the minimum variance of those fully-invested\n",
       "\n",
       "Beta to a benchmark portfolio: $\\bs f \\propto \\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma_b^2}$:\n",
       "\n",
       "* $\\bs \\beta_b^T \\bs w_b = 1$ means the portfolio has a beta of 1 to the benchmark portfolio $\\bs w_b$\n",
-      "* $\\bs w_{\\beta} = \\frac{V^{-1}\\bs \\beta_b}{\\bs \\beta_b^T V^{-1}\\bs \\beta_b} = \\frac{\\bs w_b}{\\bs{\\beta_b^T w_b}} = \\bs w_b$, which is the benchmark portfolio itself\n",
-      "* the benchmark portfolio itself is the optimal portfolio amongst those with unit beta."
+      "* $\\bs w_{\\beta} = \\frac{V^{-1}\\bs \\beta_b}{\\bs \\beta_b^T V^{-1}\\bs \\beta_b} = \\frac{\\bs w_b}{\\bs{\\beta_b^T w_b}} = \\bs w_b$, i.e., the benchmark portfolio itself\n",
+      "* the benchmark portfolio itself is optimal amongst those with unit beta."
      ]
     },
     {
