--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:b72631c776924eb8b0413b4b0a41b437d0dcbe6702617fd5252d9300f94d8533"
+  "signature": "sha256:8445f51c8b176ff4b58165aa4468b7971759ba45d1088976a9bbe615778e4b15"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1557,7 +1557,7 @@
       " * while preserving a unit dollar of excess P&L: $\\bs w^T \\bs f = 1$\n",
       "\n",
       "which solves the portfolio $\\bs w^*$ with the maximum Sharp ratio under the view $\\bs f$:\n",
-      " * $\\bs w^*$ has a unique solution\n",
+      " * $\\bs w^*$ is a unique solution\n",
       " * all portfolios with optimal Sharp ratio have the same risky asset mix"
      ]
     },
@@ -1806,7 +1806,8 @@
       "\n",
       "The simulated sharp ratios of all $1 portfolios fully invested in risky assets:\n",
       "* the optimal portfolio O has the optimal Sharp Ratio\n",
-      "* the min Variance portfolio C has the smallest variance"
+      "* the min Variance portfolio C has the smallest variance\n",
+      "* the line start from origin because we used excess return everywhere"
      ]
     },
     {
