--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:28a239a22de93a192a93f93c795e1a20f5352033ddd60f11463b3cc14924a484"
+  "signature": "sha256:f0c9977a36759c40077e6ec8b532190f83ab955d738478a344d1eee2443bcb6a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -63,7 +63,7 @@
       "\n",
       "Prove the following properties for the matrix norm, where $A, B$ are matrices, $\\boldsymbol u$ is a vector and $b$ is a scaler.\n",
       "$\\renewcommand{bs}{\\boldsymbol}$\n",
-      "* $\\Vert A ^{-1} \\Vert = \\max_{\\bs u \\ne 0} \\frac{\\Vert \\bs u\\Vert}{\\Vert A \\bs u \\Vert} = \\left(\\min_{\\bs u \\ne 0} \\frac{\\Vert A \\bs u}{\\Vert \\bs u \\Vert}\\right)^{-1}$\n",
+      "* $\\Vert A ^{-1} \\Vert = \\max_{\\bs u \\ne 0} \\frac{\\Vert \\bs u\\Vert}{\\Vert A \\bs u \\Vert} = \\left(\\min_{\\bs u \\ne 0} \\frac{\\Vert A \\bs u \\Vert}{\\Vert \\bs u \\Vert}\\right)^{-1}$\n",
       "* $\\Vert A \\boldsymbol u \\Vert  \\le \\Vert A\\Vert \\; \\Vert \\boldsymbol u\\Vert $\n",
       "* $\\Vert b A\\Vert  = \\vert b\\vert \\; \\Vert A\\Vert $ \n",
       "* $\\Vert A + B\\Vert  \\le \\Vert A\\Vert  + \\Vert B\\Vert $\n",
@@ -381,8 +381,8 @@
      "input": [
       "whole = np.arange(1, 10)\n",
       "print \"whole = \", whole\n",
-      "even = whole[0::2]\n",
-      "odd = whole[1::2]\n",
+      "odd = whole[0::2]\n",
+      "even = whole[1::2]\n",
       "print \"even = \", even\n",
       "print \"odd = \", odd"
      ],
@@ -394,8 +394,8 @@
        "stream": "stdout",
        "text": [
         "whole =  [1 2 3 4 5 6 7 8 9]\n",
-        "even =  [1 3 5 7 9]\n",
-        "odd =  [2 4 6 8]\n"
+        "even =  [2 4 6 8]\n",
+        "odd =  [1 3 5 7 9]\n"
        ]
       }
      ],
