--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:3f9282a6738f4e7bd307298993fc3840b078a7c1ff2d91ddd7f2d62a10a1e277"
+  "signature": "sha256:101bd747cd97ec37591326734d7d3b6c99276e1d5351ef5e2d04e5650d002803"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -725,26 +725,6 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "## Complexity of numerical algorithm\n",
-      "\n",
-      "Complexity of a numerical algorithm is stated in the order of magnitude, often in the big-O notation:\n",
-      "\n",
-      "* binary search $O(\\log(n))$\n",
-      "* best sorting algorithm: $O(n \\log(n))$\n",
-      "\n",
-      "Most common numerical linear algebra algorithm is of complexity of $O(n^3)$\n",
-      "* matrix multiplication: $n^2$ elements in output, each element takes $O(n)$\n",
-      "* LU decomposition: $n$ diagonal elements, to zero-out each column costs $O(n^2)$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
        "slide_type": "slide"
       }
      },
@@ -1403,6 +1383,27 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Complexity\n",
+      "\n",
+      "Complexity of a numerical algorithm is stated in the order of magnitude, often in the big-O notation:\n",
+      "\n",
+      "* binary search $O(\\log(n))$\n",
+      "* best sorting algorithm: $O(n \\log(n))$\n",
+      "\n",
+      "Most common numerical linear algebra algorithms are of complexity of $O(n^3)$\n",
+      "* matrix multiplication: $n^2$ elements in output, each element takes $O(n)$\n",
+      "* LU decomposition: $n$ diagonal elements, to zero-out each column costs $O(n^2)$\n",
+      "* Cholesky decomposition: $n$ recursive steps, each takes $O(n^2)$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
        "slide_type": "slide"
       }
      },
@@ -1539,26 +1540,6 @@
       }
      },
      "source": [
-      "## Benchmark portfolio and $\\bs \\beta$\n",
-      "\n",
-      "Benchmark portfolio is usually an index portfolio to measure the performane of active portfolio management. \n",
-      "\n",
-      "* $\\bs w_b$: a benchmark portfolio\n",
-      "  * The beta of a portfolio $\\bs w$ to the benchmark is $\\frac{\\text{cov}(\\bs w^T \\tilde{\\bs r}, \\bs w_b^T \\tilde{\\bs r})}{\\sigma_b^2} = \\frac{\\bs w^T V \\bs w_b^T}{\\sigma_b^2} = \\bs w^T \\bs \\beta_b$\n",
-      "  * Define $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $, the vector of individual assets' beta to the benchmark\n",
-      "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = {1}$, the benchmark portfolio itself has a beta of $1$\n",
-      "* $\\bs w_m$: the market portfolio, as defined in CAPM\n",
-      "  * $\\bs \\beta_m = \\frac{V\\bs w_m}{\\sigma^2_m}$: the betas vector to the market portfolio $\\bs w_m$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
       "## Portfolio optimization\n",
       "Given the view $\\bs f$, the optimal portfolio $\\bs w$ to express the view is:\n",
       " * minimize the variance of portfolio P&L (risk): $\\bs w^TV\\bs w$\n",
@@ -1625,6 +1606,26 @@
       "\n",
       "Therefore, only the relative sizes of excess returns are important\n",
       "* e.g. excess return forecast of [1%, 2%] and [10%, 20%] of two assets would result in identical optimal (characteristic) portfolio"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Benchmark portfolio and $\\bs \\beta$\n",
+      "\n",
+      "Benchmark portfolio is usually an index portfolio to measure the performane of active portfolio management. \n",
+      "\n",
+      "* $\\bs w_b$: a benchmark portfolio\n",
+      "  * The beta of a portfolio $\\bs w$ to the benchmark is $\\frac{\\text{cov}(\\bs w^T \\tilde{\\bs r}, \\bs w_b^T \\tilde{\\bs r})}{\\sigma_b^2} = \\frac{\\bs w^T V \\bs w_b^T}{\\sigma_b^2} = \\bs w^T \\bs \\beta_b$\n",
+      "  * Define $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $, the vector of individual assets' beta to the benchmark\n",
+      "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = {1}$, the benchmark portfolio itself has a beta of $1$\n",
+      "* $\\bs w_m$: the market portfolio, as defined in CAPM\n",
+      "  * $\\bs \\beta_m = \\frac{V\\bs w_m}{\\sigma^2_m}$: the betas vector to the market portfolio $\\bs w_m$"
      ]
     },
     {
